--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jura&display=swap"
+      rel="stylesheet"
+    />
+    <title>VideoGames</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="imagen-index">
+        <a class="none" href="index.html">
+          <img class="logo" src="img/mando.png" alt="icon" />
+        </a>
+        <div class="contenido">
+          <div>
+            <h2>Juegos chidos</h2>
+            <h1>Unete a la mejor comunidad de jugadores online</h1>
+            <a class="btns" href="sign-in.html">Unete</a>
+            <a class="btns" href="login.html">Inicia sesion</a>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
