--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>Juegos chidos</h2>
             <h1>Unete a la mejor comunidad de jugadores online</h1>
             <a class="btns" href="sign-in.html">Unete</a>
-            <a class="btns" href="login.html">Inicia sesion</a>
+            <a class="btns" href="login.html">Inicia sesión</a>
           </div>
         </div>
       </div>
