--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
     </a>
     <div class="imglogin formularioc contenedor">
       <form class="formulario">
-        <h3>Inicia sesion</h3>
+        <h3>Inicia sesión</h3>
         <div class="form">
           <div class="separador">
             <label for="">Nombre de usuario:</label>
