--- a/sign-in.html
+++ b/sign-in.html
@@ -47,7 +47,7 @@
           </a>
           <a class="btns" href="login.html">Aceptar</a>
           <a href="login.html" class="iniciosesion"
-            >Ya tienes cuenta?, inicia sesion</a
+            >Ya tienes cuenta?, inicia sesión</a
           >
         </div>
       </form>
